H3CIPMSJAVA-20180830/src/objects/Interface_URL__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>EBS_ES__c</fullName>
        <label>EBS ES</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ES_URL__c</fullName>
        <label>ES URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GSEM_CloseCase_URL__c</fullName>
        <label>GSEM CloseCase URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GSEM_SendMsg_URL__c</fullName>
        <label>GSEM SendMsg URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GSEM_Service_Client_id__c</fullName>
        <label>GSEM Service Client_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSEM_Service_Client_secret__c</fullName>
        <label>GSEM Service Client_secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSEM_Service_Host__c</fullName>
        <description>base host</description>
        <label>GSEM Service Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSEM_Service_Password__c</fullName>
        <label>GSEM Service Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSEM_Service_UsreName__c</fullName>
        <label>GSEM Service UsreName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGSO_URL__c</fullName>
        <label>IGSO URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NGMS_CloseCaseAuth__c</fullName>
        <label>NGMS CloseCaseAuth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGMS_CloseCaseURLIN__c</fullName>
        <label>NGMS CloseCaseURLIN</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NGMS_CloseCaseURL__c</fullName>
        <label>NGMS CloseCaseURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNR_Bom_URL__c</fullName>
        <label>SNR Bom URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SNR_Bundle_URL__c</fullName>
        <label>SNR Bundle URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SPMS_URL__c</fullName>
        <label>SPMS_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>T_M_URL__c</fullName>
        <label>T&amp;M URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Interface URL</label>
</CustomObject>